--- a/About Us.html
+++ b/About Us.html
@@ -108,8 +108,8 @@
             <col width=33.3%>
             <tr>
                 <td colspan="3" align="center">
-                    <img src="aneesh.jpeg" id="border1" height="13%" width="15%"><br>
-                    <strong>Aneesh Kumar</strong><br>Team Leader<br><strong>Roll
+                    <img src="" id="border1" height="13%" width="15%"><br>
+                    <strong></strong><br>Team Leader<br><strong>Roll
                         No:-</strong>2110991635<br><strong>Created:-</strong>Home Page, Feedback Form
                 </td>
             </tr>
@@ -120,8 +120,8 @@
                         No:-</strong>2110991557<br><strong>Created:-</strong>Login/Sign Up Page
                 </td>
                 <td align="center">
-                    <img src="chirag.jpeg" id="border1" height="13%" width="48%" class="chirag"><br>
-                    <strong>Chirag</strong><br><strong>Roll No:-</strong>2110991678<br><strong>Created:-</strong>About
+                    <img src="" id="border1" height="13%" width="48%" class="chirag"><br>
+                    <strong>Vonika</strong><br><strong>Roll No:-</strong>2110991678<br><strong>Created:-</strong>About
                     Us Page, FAQ Form
                 </td>
                 <td align="center">
